# AGVTaskROS

./: Lab 6 - SLAM and Pure Pursuit.md  ROSExercise1.odt  ROSExercise2.odt  ROSTask2.odt  ROS_Task_Documentation.odt
F1Tenth/ROS - AGV/: Docker Lab.md  F1Tenth Gym + Lab2.md  L03 Rigid Body Transformations.md  L04 PID Control for Wall Following.md  L06 Vehicle States, Vehicle Dynamics, Map Represen.md  L10 Pure Pursuit.md  ROS.md
IntroTasks/: ROSExercise1.odt  ROSExercise2.odt  ROSTask1.odt
IntroTasks/ODTs/: ROSExercise2.odt  ROSExercise3.odt  ROS_Task_Documentation.odt  Ubuntu_Dual_Boot.odt
Main/Workspaces/smb_ex_2/devel/: env.sh  local_setup.sh  setup.bash  setup.sh  setup.zsh
Main/Workspaces/smb_ex_2/src/: smb_gazebo.launch
Main/Workspaces/smb_ws/devel/: _setup_util.py  local_setup.zsh
Main/Workspaces/smb_ws/src/: changed.launch  smb_highlevel.launch
Main/Workspaces/smb_ws3/devel/: .catkin  env.sh  local_setup.sh  local_setup.zsh  setup.bash  setup.zsh
Main/Workspaces/smb_ws3/src/: changed.launch  default.rviz  teleop_twist_keyboard
Main/Workspaces/task_ws/devel/: .catkin  .rosinstall  local_setup.sh
Main/Workspaces/task_ws2/: cmd_vel.yaml
Main/Workspaces/task_ws2/bag/: cmd_vel (copy).yaml  noise.py
Main/Workspaces/task_ws2/devel/: _setup_util.py
Main/sim_ws/install/: setup.sh
Main/sim_ws/log/: latest_build
Work/Workspaces/smb_ex_2/devel/: .catkin  (+3 more)
Work/sim_ws/install/: local_setup.sh
Work/sim_ws/src/safety_node/: package.xml
Work/sim_ws/src/safety_node/safety_node/: safety_node.py
Work/sim_ws/src/safety_node/scripts/: safety_node.py
(+292 files in other folders)
